cloudformation/aws_env.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: Nginx server with custom index.html

Resources:
  MyVPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/24
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: TanVPC

  MyInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: TanInternetGateway

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref TanVPC
      InternetGatewayId: !Ref TanInternetGateway

  MySubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref TanVPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: TanSubnet

  MyRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref TanVPC
      Tags:
        - Key: Name
          Value: TanRouteTable

  MyRoute:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref TanRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref TanInternetGateway

  SubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref TanSubnet
      RouteTableId: !Ref TanRouteTable

  InstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP, HTTPS, and SSH access
      VpcId: !Ref TanVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: -1
          ToPort: -1
          CidrIp: 0.0.0.0/0

  MyEC2Instance:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: t2.micro
      KeyName: TanKeypair
      ImageId: ami-02346a771f34de8ac
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: 0
          SubnetId: !Ref TanSubnet
          GroupSet:
            - !Ref InstanceSecurityGroup
      IamInstanceProfile: EC2_SSM_ReadOnly
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo yum update -y
          sudo yum install -y nginx git aws-cli
          TOKEN=$(aws ssm get-parameter --name "github_token" --with-decryption --query "Parameter.Value" --output text)
          git clone https://phuongtoantan:${TOKEN}@github.com/phuongtoantan/demoCF ~/demoCF
          sudo cp ~/demoCF/src/index.html /usr/share/nginx/html/index.html
          sudo systemctl start nginx
          sudo systemctl enable nginx

Outputs:
  InstancePublicDNS:
    Description: Public DNS of the instance
    Value: !GetAtt 
      - MyEC2Instance
      - PublicDnsName
  InstanceId:
    Description: "The instance ID of the EC2 instance"
    Value: !Ref MyEC2Instance
